--- a/output/cnlsy_predict_ready.tex
+++ b/output/cnlsy_predict_ready.tex
@@ -1,23 +1,23 @@
 \begin{tabular}{lccc} \toprule
- & (1) & (2) & (3) \\ \midrule 
-Male & 6,035.167*** & 6,076.817*** & 2,848.271* \\
- & (1,187.329) & (1,090.286) & (1,511.141) \\
-Black & -9,285.510*** & -4,534.764*** & -1,949.783 \\
- & (1,179.675) & (1,092.219) & (1,460.488) \\
-Mother's Education & 2,396.355*** & 262.807 & -220.899 \\
- & (333.230) & (324.874) & (464.989) \\
-PIAT (5-7) &  & 148.468*** & 132.704* \\
- &  & (54.301) & (78.451) \\
-Education (30) &  & 3,928.574*** & 2,682.560*** \\
- &  & (276.850) & (539.888) \\
-Labor Income (21)&  & 0.579*** & 0.286*** \\
- &  & (0.058) & (0.079) \\
-Labor Income (28) &  &  & 0.431*** \\
- &  &  & (0.087) \\
-BMI (34)&  & -21.917 & -191.210* \\
- &  & (78.862) & (108.666) \\
-Constant & 1,694.816 & -48,148.884*** & -27,741.389*** \\
- & (3,896.674) & (5,998.816) & (8,806.153) \\ \\ \midrule
+ & (1) & (2) & (3) \\ \\ \midrule
+Male & 6,035.167*** & 6,076.817*** & 3,386.390** \\
+ & (1,187.329) & (1,090.286) & (1,528.888) \\
+Black & -9,285.510*** & -4,534.764*** & -2,634.691* \\
+ & (1,179.675) & (1,092.219) & (1,499.386) \\
+Mother's Education & 2,396.355*** & 262.807 & -164.905 \\
+ & (333.230) & (324.874) & (466.447) \\
+PIAT (5-7)&  & 148.468*** & 193.189** \\
+ &  & (54.301) & (81.647) \\
+Education (30) &  & 3,928.574*** & 2,415.347*** \\
+ &  & (276.850) & (533.030) \\
+Labor Income (21) &  & 0.579*** &  \\
+ &  & (0.058) &  \\
+BMI (34) &  & -21.917 & -204.699* \\
+ &  & (78.862) & (110.928) \\
+Labor Income (28) &  &  & 0.464*** \\
+ &  &  & (0.085) \\
+Constant & 1,694.816 & -48,148.884*** & -27,860.399*** \\
+ & (3,896.674) & (5,998.816) & (8,861.814) \\ \\ \midrule 
  Observations & 1,424 & 1,424 & 628 \\
-$R^2$ & 0.102 & 0.309 & 0.482 \\ \bottomrule
+$R^2$ & 0.102 & 0.309 & 0.468 \\ \bottomrule
 \end{tabular}
