--- a/output/select_rslt_combined.tex
+++ b/output/select_rslt_combined.tex
@@ -1,7 +1,72 @@
   \begin{tabular}{ccccccccccc}
   \toprule
    Category & Variable & Age & (1) & (2) & (3) & (4) & (5) & (6)\\
+
     \midrule
+     \multicolumn{9}{c}{\textbf{\emph{Females}}} \\ \\
+    %cat 3
+    \mc{1}{l}{\scriptsize{Parental Income}} & \mc{1}{l}{\scriptsize{Parental Income}} & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{4,516}} & \mc{1}{c}{\scriptsize{7,539}} & \mc{1}{c}{\scriptsize{5,105}} & \mc{1}{c}{\scriptsize{8,682}} & \mc{1}{c}{\scriptsize{9,681}} & \mc{1}{c}{\scriptsize{4,309}}  \\
+
+    & &  & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.158)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.105)}} \\
+
+ & & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{2,756}} & \mc{1}{c}{\scriptsize{4,043}} & \mc{1}{c}{\scriptsize{4,469}} & \mc{1}{c}{\scriptsize{7,429}} & \mc{1}{c}{\scriptsize{8,577}} & \mc{1}{c}{\scriptsize{2,125}} \\
+
+   &  &  & \mc{1}{c}{\scriptsize{(0.211)}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{(0.276)}} \\
+
+   &  & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{4,039}} & \mc{1}{c}{\scriptsize{8,141}} & \mc{1}{c}{\scriptsize{6,443}} & \mc{1}{c}{\scriptsize{9,836}} & \mc{1}{c}{\scriptsize{9,337}} & \mc{1}{c}{\scriptsize{3,202}}  \\
+
+   &  &  & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.118)}} \\
+
+   &  & \mc{1}{c}{\scriptsize{12}} & \mc{1}{c}{\scriptsize{9.901}} & \mc{1}{c}{\scriptsize{11.406}} & \mc{1}{c}{\scriptsize{-5.615}} & \mc{1}{c}{\scriptsize{11.168}} & \mc{1}{c}{\scriptsize{10.568}} & \mc{1}{c}{\scriptsize{11.612}}  \\
+   
+   &  &  & \mc{1}{c}{\scriptsize{\textbf{(0.098)}}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{(0.647)}} & \mc{1}{c}{\scriptsize{\textbf{(0.059)}}} & \mc{1}{c}{\scriptsize{(0.137)}} & \mc{1}{c}{\scriptsize{\textbf{(0.098)}}} \\
+        % cat 6
+      \mc{1}{l}{\scriptsize{Education}} &   \mc{1}{l}{\scriptsize{Graduated High School}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.253}} & \mc{1}{c}{\scriptsize{0.148}} & \mc{1}{c}{\scriptsize{0.642}} & \mc{1}{c}{\scriptsize{0.519}} & \mc{1}{c}{\scriptsize{0.595}} & \mc{1}{c}{\scriptsize{0.137}} \\
+
+  &   &  & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.158)}}  \\
+
+   &   \mc{1}{l}{\scriptsize{Graduated 4-year College}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.134}} & \mc{1}{c}{\scriptsize{0.102}} & \mc{1}{c}{\scriptsize{0.217}} & \mc{1}{c}{\scriptsize{0.097}} & \mc{1}{c}{\scriptsize{0.210}} & \mc{1}{c}{\scriptsize{0.106}} \\
+
+   &  &  & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{(0.158)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.145)}} \\
+
+   & \mc{1}{l}{\scriptsize{Years of Education}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{2.143}} & \mc{1}{c}{\scriptsize{1.695}} & \mc{1}{c}{\scriptsize{4.025}} & \mc{1}{c}{\scriptsize{2.984}} & \mc{1}{c}{\scriptsize{3.918}} & \mc{1}{c}{\scriptsize{1.567}}  \\
+
+  &   &  & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} \\
+
+
+           \mc{1}{l}{\scriptsize{Labor Income}} & \mc{1}{l}{\scriptsize{Employed}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.131}} & \mc{1}{c}{\scriptsize{0.080}} & \mc{1}{c}{\scriptsize{0.333}} & \mc{1}{c}{\scriptsize{0.363}} & \mc{1}{c}{\scriptsize{0.340}} & \mc{1}{c}{\scriptsize{0.056}}  \\
+
+     & &  & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.171)}} & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.276)}}  \\
+
+   &  \mc{1}{l}{\scriptsize{Labor Income}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{2,548}} & \mc{1}{c}{\scriptsize{2,391}} & \mc{1}{c}{\scriptsize{14,356}} & \mc{1}{c}{\scriptsize{8,166}} & \mc{1}{c}{\scriptsize{14,835}} & \mc{1}{c}{\scriptsize{-425}}  \\
+
+   &  &  & \mc{1}{c}{\scriptsize{(0.368)}} & \mc{1}{c}{\scriptsize{(0.355)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.171)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.566)}}  \\
+
+
+     % cat 8
+     \mc{1}{l}{\scriptsize{Crime}} &  \mc{1}{l}{\scriptsize{Total Felony Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.328}} & \mc{1}{c}{\scriptsize{-0.390}} & \mc{1}{c}{\scriptsize{-1.345}} & \mc{1}{c}{\scriptsize{-1.011}} & \mc{1}{c}{\scriptsize{-0.968}} & \mc{1}{c}{\scriptsize{-0.077}} \\
+
+   &  &  & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{(0.145)}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{(0.171)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{(0.237)}}  \\
+
+  &  \mc{1}{l}{\scriptsize{Total Misdemeanor Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.973}} & \mc{1}{c}{\scriptsize{-0.883}} & \mc{1}{c}{\scriptsize{-2.708}} & \mc{1}{c}{\scriptsize{-2.177}} & \mc{1}{c}{\scriptsize{-2.453}} & \mc{1}{c}{\scriptsize{-0.588}}  \\
+
+  &   &  & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.145)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}}  \\
+     % cat 9
+      \mc{1}{l}{\scriptsize{Health}} &   \mc{1}{l}{\scriptsize{Self-reported drug user}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.033}} & \mc{1}{c}{\scriptsize{-0.079}} & \mc{1}{c}{\scriptsize{-0.116}} & \mc{1}{c}{\scriptsize{-0.196}} & \mc{1}{c}{\scriptsize{-0.101}} & \mc{1}{c}{\scriptsize{-0.010}} \\
+
+   &  &  & \mc{1}{c}{\scriptsize{(0.395)}} & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.263)}} & \mc{1}{c}{\scriptsize{(0.158)}} & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.434)}} \\
+     % cat 11
+     &  \mc{1}{l}{\scriptsize{Systolic Blood Pressure}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.899}} & \mc{1}{c}{\scriptsize{-3.901}} & \mc{1}{c}{\scriptsize{1.065}} & \mc{1}{c}{\scriptsize{2.263}} & \mc{1}{c}{\scriptsize{-0.577}} & \mc{1}{c}{\scriptsize{-3.980}} \\
+
+    & &  & \mc{1}{c}{\scriptsize{(0.289)}} & \mc{1}{c}{\scriptsize{(0.263)}} & \mc{1}{c}{\scriptsize{(0.592)}} & \mc{1}{c}{\scriptsize{(0.645)}} & \mc{1}{c}{\scriptsize{(0.526)}} & \mc{1}{c}{\scriptsize{(0.316)}}  \\
+
+  &  \mc{1}{l}{\scriptsize{Diastolic Blood Pressure}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.002}} & \mc{1}{c}{\scriptsize{1.317}} & \mc{1}{c}{\scriptsize{4.725}} & \mc{1}{c}{\scriptsize{7.497}} & \mc{1}{c}{\scriptsize{4.337}} & \mc{1}{c}{\scriptsize{-1.290}} \\
+
+   &  &  & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.816)}} & \mc{1}{c}{\scriptsize{(0.829)}} & \mc{1}{c}{\scriptsize{(0.750)}} & \mc{1}{c}{\scriptsize{(0.316)}} \\
+   &    \mc{1}{l}{\scriptsize{Hypertension}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.172}} & \mc{1}{c}{\scriptsize{0.159}} & \mc{1}{c}{\scriptsize{0.232}} & \mc{1}{c}{\scriptsize{0.156}} & \mc{1}{c}{\scriptsize{0.181}} & \mc{1}{c}{\scriptsize{0.156}}  \\
+
+    & &  & \mc{1}{c}{\scriptsize{(0.895)}} & \mc{1}{c}{\scriptsize{(0.842)}} & \mc{1}{c}{\scriptsize{(0.895)}} & \mc{1}{c}{\scriptsize{(0.803)}} & \mc{1}{c}{\scriptsize{(0.829)}} & \mc{1}{c}{\scriptsize{(0.829)}} \\
+\midrule
     \multicolumn{9}{c}{\textbf{\emph{Males}}} \\ \\
     % cat 3
     \mc{1}{l}{Parental Income} &  \mc{1}{l}{Parental Income} & \mc{1}{c}{1.5} & \mc{1}{c}{330} & \mc{1}{c}{-97.199} & \mc{1}{c}{-2,384} & \mc{1}{c}{-1,168}  & \mc{1}{c}{-26.663} & \mc{1}{c}{872} \\
@@ -14,8 +79,11 @@
 
    &  & \mc{1}{c}{4.5} & \mc{1}{c}{821} & \mc{1}{c}{1,677} & \mc{1}{c}{3,815} & \mc{1}{c}{-2,662} & \mc{1}{c}{917} & \mc{1}{c}{-429} \\
 
-    & &  & \mc{1}{c}{(0.355)} & \mc{1}{c}{(0.303)} & \mc{1}{c}{(0.132)} & \mc{1}{c}{(0.803)} & \mc{1}{c}{(0.434)} & \mc{1}{c}{(0.461)} \\    
+    & &  & \mc{1}{c}{(0.355)} & \mc{1}{c}{(0.303)} & \mc{1}{c}{(0.132)} & \mc{1}{c}{(0.803)} & \mc{1}{c}{(0.434)} & \mc{1}{c}{(0.461)} \\
+
+    &  & \mc{1}{c}{12} & \mc{1}{c}{7.800} & \mc{1}{c}{7.140} & \mc{1}{c}{10.788} & \mc{1}{c}{9.218} & \mc{1}{c}{5.775} & \mc{1}{c}{7.808} \\
     
+    & &  & \mc{1}{c}{\textbf{(0.000)}} & \mc{1}{c}{\textbf{(0.078)}} & \mc{1}{c}{\textbf{(0.059)}} & \mc{1}{c}{\textbf{(0.078)}} & \mc{1}{c}{(0.137)} & \mc{1}{c}{\textbf{(0.039)}} \\
         % cat 6
    \mc{1}{l}{Education} &  \mc{1}{l}{Graduated High School} & \mc{1}{c}{30} & \mc{1}{c}{0.073} & \mc{1}{c}{0.109}  & \mc{1}{c}{0.113} & \mc{1}{c}{0.085}  & \mc{1}{c}{0.102} & \mc{1}{c}{0.064} \\
 
@@ -28,7 +96,7 @@
   &  \mc{1}{l}{Years of Education} & \mc{1}{c}{30} & \mc{1}{c}{0.525} & \mc{1}{c}{0.708}  & \mc{1}{c}{1.302} & \mc{1}{c}{0.791}  & \mc{1}{c}{0.540} & \mc{1}{c}{0.347} \\
 
    &  &  & \mc{1}{c}{\textbf{(0.079)}} & \mc{1}{c}{\textbf{(0.079)}}  & \mc{1}{c}{\textbf{(0.092)}} & \mc{1}{c}{(0.171)}  & \mc{1}{c}{(0.132)} & \mc{1}{c}{(0.276)} \\
-    
+
     % cat 7
      \mc{1}{l}{Labor Income} & \mc{1}{l}{Employed} & \mc{1}{c}{30} & \mc{1}{c}{0.119} & \mc{1}{c}{0.179} & \mc{1}{c}{-0.050} & \mc{1}{c}{0.041} & \mc{1}{c}{0.245} & \mc{1}{c}{0.262} \\
 
@@ -37,7 +105,7 @@
     &   \mc{1}{l}{Labor Income} & \mc{1}{c}{30} & \mc{1}{c}{19,810} & \mc{1}{c}{24,902} & \mc{1}{c}{21,069} & \mc{1}{c}{24,012} & \mc{1}{c}{28,483} & \mc{1}{c}{21,170} \\
 
    &  &  & \mc{1}{c}{\textbf{(0.079)}} & \mc{1}{c}{(0.171)} & \mc{1}{c}{(0.263)} & \mc{1}{c}{(0.105)} & \mc{1}{c}{(0.132)} & \mc{1}{c}{(0.158)} \\
-   
+
     % cat 8
       \mc{1}{l}{Crime} & \mc{1}{l}{Total Felony Arrests} & \mc{1}{c}{Mid-30s} & \mc{1}{c}{0.196} & \mc{1}{c}{0.683} & \mc{1}{c}{2.132} & \mc{1}{c}{1.337}  & \mc{1}{c}{0.466} & \mc{1}{c}{0.183} \\
 
@@ -64,68 +132,5 @@
 & \mc{1}{l}{Hypertension} & \mc{1}{c}{Mid-30s} & \mc{1}{c}{-0.291} & \mc{1}{c}{-0.383} & \mc{1}{c}{0.090} & \mc{1}{c}{-0.064}  & \mc{1}{c}{-0.511} & \mc{1}{c}{-0.517} \\
 
    &  &  & \mc{1}{c}{\textbf{(0.039)}} & \mc{1}{c}{\textbf{(0.013)}} & \mc{1}{c}{(0.461)} & \mc{1}{c}{(0.368)}  & \mc{1}{c}{\textbf{(0.000)}} & \mc{1}{c}{\textbf{(0.000)}} \\
-
-    \midrule
-     \multicolumn{9}{c}{\textbf{\emph{Females}}} \\ \\
-    %cat 3
-    \mc{1}{l}{\scriptsize{Parental Income}} & \mc{1}{l}{\scriptsize{Parental Income}} & \mc{1}{c}{\scriptsize{1.5}} & \mc{1}{c}{\scriptsize{4,516}} & \mc{1}{c}{\scriptsize{7,539}} & \mc{1}{c}{\scriptsize{5,105}} & \mc{1}{c}{\scriptsize{8,682}} & \mc{1}{c}{\scriptsize{9,681}} & \mc{1}{c}{\scriptsize{4,309}}  \\  
-
-    & &  & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.158)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.105)}} \\  
-
- & & \mc{1}{c}{\scriptsize{3.5}} & \mc{1}{c}{\scriptsize{2,756}} & \mc{1}{c}{\scriptsize{4,043}} & \mc{1}{c}{\scriptsize{4,469}} & \mc{1}{c}{\scriptsize{7,429}} & \mc{1}{c}{\scriptsize{8,577}} & \mc{1}{c}{\scriptsize{2,125}} \\  
-
-   &  &  & \mc{1}{c}{\scriptsize{(0.211)}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{(0.276)}} \\  
-
-   &  & \mc{1}{c}{\scriptsize{4.5}} & \mc{1}{c}{\scriptsize{4,039}} & \mc{1}{c}{\scriptsize{8,141}} & \mc{1}{c}{\scriptsize{6,443}} & \mc{1}{c}{\scriptsize{9,836}} & \mc{1}{c}{\scriptsize{9,337}} & \mc{1}{c}{\scriptsize{3,202}}  \\  
-
-   &  &  & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.026)}}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.118)}} \\    
-   
-        % cat 6
-      \mc{1}{l}{\scriptsize{Education}} &   \mc{1}{l}{\scriptsize{Graduated High School}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.253}} & \mc{1}{c}{\scriptsize{0.148}} & \mc{1}{c}{\scriptsize{0.642}} & \mc{1}{c}{\scriptsize{0.519}} & \mc{1}{c}{\scriptsize{0.595}} & \mc{1}{c}{\scriptsize{0.137}} \\  
-
-  &   &  & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.158)}}  \\  
-     
-   &   \mc{1}{l}{\scriptsize{Graduated 4-year College}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.134}} & \mc{1}{c}{\scriptsize{0.102}} & \mc{1}{c}{\scriptsize{0.217}} & \mc{1}{c}{\scriptsize{0.097}} & \mc{1}{c}{\scriptsize{0.210}} & \mc{1}{c}{\scriptsize{0.106}} \\  
-
-   &  &  & \mc{1}{c}{\scriptsize{\textbf{(0.066)}}} & \mc{1}{c}{\scriptsize{(0.158)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.145)}} \\  
-
-   & \mc{1}{l}{\scriptsize{Years of Education}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{2.143}} & \mc{1}{c}{\scriptsize{1.695}} & \mc{1}{c}{\scriptsize{4.025}} & \mc{1}{c}{\scriptsize{2.984}} & \mc{1}{c}{\scriptsize{3.918}} & \mc{1}{c}{\scriptsize{1.567}}  \\  
-
-  &   &  & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} \\     
-     
-     
-           \mc{1}{l}{\scriptsize{Labor Income}} & \mc{1}{l}{\scriptsize{Employed}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{0.131}} & \mc{1}{c}{\scriptsize{0.080}} & \mc{1}{c}{\scriptsize{0.333}} & \mc{1}{c}{\scriptsize{0.363}} & \mc{1}{c}{\scriptsize{0.340}} & \mc{1}{c}{\scriptsize{0.056}}  \\  
-
-     & &  & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{(0.171)}} & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.053)}}} & \mc{1}{c}{\scriptsize{(0.276)}}  \\  
-     
-   &  \mc{1}{l}{\scriptsize{Labor Income}} & \mc{1}{c}{\scriptsize{30}} & \mc{1}{c}{\scriptsize{2,548}} & \mc{1}{c}{\scriptsize{2,391}} & \mc{1}{c}{\scriptsize{14,356}} & \mc{1}{c}{\scriptsize{8,166}} & \mc{1}{c}{\scriptsize{14,835}} & \mc{1}{c}{\scriptsize{-425}}  \\  
-
-   &  &  & \mc{1}{c}{\scriptsize{(0.368)}} & \mc{1}{c}{\scriptsize{(0.355)}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{(0.171)}} & \mc{1}{c}{\scriptsize{\textbf{(0.013)}}} & \mc{1}{c}{\scriptsize{(0.566)}}  \\  
-    
-
-     % cat 8
-     \mc{1}{l}{\scriptsize{Crime}} &  \mc{1}{l}{\scriptsize{Total Felony Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.328}} & \mc{1}{c}{\scriptsize{-0.390}} & \mc{1}{c}{\scriptsize{-1.345}} & \mc{1}{c}{\scriptsize{-1.011}} & \mc{1}{c}{\scriptsize{-0.968}} & \mc{1}{c}{\scriptsize{-0.077}} \\  
-
-   &  &  & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{(0.145)}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{(0.171)}} & \mc{1}{c}{\scriptsize{(0.118)}} & \mc{1}{c}{\scriptsize{(0.237)}}  \\  
-
-  &  \mc{1}{l}{\scriptsize{Total Misdemeanor Arrests}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.973}} & \mc{1}{c}{\scriptsize{-0.883}} & \mc{1}{c}{\scriptsize{-2.708}} & \mc{1}{c}{\scriptsize{-2.177}} & \mc{1}{c}{\scriptsize{-2.453}} & \mc{1}{c}{\scriptsize{-0.588}}  \\  
-
-  &   &  & \mc{1}{c}{\scriptsize{\textbf{(0.039)}}} & \mc{1}{c}{\scriptsize{(0.145)}} & \mc{1}{c}{\scriptsize{\textbf{(0.079)}}} & \mc{1}{c}{\scriptsize{(0.184)}} & \mc{1}{c}{\scriptsize{(0.105)}} & \mc{1}{c}{\scriptsize{\textbf{(0.092)}}}  \\  
-     % cat 9
-      \mc{1}{l}{\scriptsize{Health}} &   \mc{1}{l}{\scriptsize{Self-reported drug user}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.033}} & \mc{1}{c}{\scriptsize{-0.079}} & \mc{1}{c}{\scriptsize{-0.116}} & \mc{1}{c}{\scriptsize{-0.196}} & \mc{1}{c}{\scriptsize{-0.101}} & \mc{1}{c}{\scriptsize{-0.010}} \\  
-
-   &  &  & \mc{1}{c}{\scriptsize{(0.395)}} & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.263)}} & \mc{1}{c}{\scriptsize{(0.158)}} & \mc{1}{c}{\scriptsize{(0.276)}} & \mc{1}{c}{\scriptsize{(0.434)}} \\  
-     % cat 11
-     &  \mc{1}{l}{\scriptsize{Systolic Blood Pressure}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-2.899}} & \mc{1}{c}{\scriptsize{-3.901}} & \mc{1}{c}{\scriptsize{1.065}} & \mc{1}{c}{\scriptsize{2.263}} & \mc{1}{c}{\scriptsize{-0.577}} & \mc{1}{c}{\scriptsize{-3.980}} \\  
-
-    & &  & \mc{1}{c}{\scriptsize{(0.289)}} & \mc{1}{c}{\scriptsize{(0.263)}} & \mc{1}{c}{\scriptsize{(0.592)}} & \mc{1}{c}{\scriptsize{(0.645)}} & \mc{1}{c}{\scriptsize{(0.526)}} & \mc{1}{c}{\scriptsize{(0.316)}}  \\  
-
-  &  \mc{1}{l}{\scriptsize{Diastolic Blood Pressure}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{-0.002}} & \mc{1}{c}{\scriptsize{1.317}} & \mc{1}{c}{\scriptsize{4.725}} & \mc{1}{c}{\scriptsize{7.497}} & \mc{1}{c}{\scriptsize{4.337}} & \mc{1}{c}{\scriptsize{-1.290}} \\  
-
-   &  &  & \mc{1}{c}{\scriptsize{(0.461)}} & \mc{1}{c}{\scriptsize{(0.500)}} & \mc{1}{c}{\scriptsize{(0.816)}} & \mc{1}{c}{\scriptsize{(0.829)}} & \mc{1}{c}{\scriptsize{(0.750)}} & \mc{1}{c}{\scriptsize{(0.316)}} \\  
-   &    \mc{1}{l}{\scriptsize{Hypertension}} & \mc{1}{c}{\scriptsize{Mid-30s}} & \mc{1}{c}{\scriptsize{0.172}} & \mc{1}{c}{\scriptsize{0.159}} & \mc{1}{c}{\scriptsize{0.232}} & \mc{1}{c}{\scriptsize{0.156}} & \mc{1}{c}{\scriptsize{0.181}} & \mc{1}{c}{\scriptsize{0.156}}  \\  
-
-    & &  & \mc{1}{c}{\scriptsize{(0.895)}} & \mc{1}{c}{\scriptsize{(0.842)}} & \mc{1}{c}{\scriptsize{(0.895)}} & \mc{1}{c}{\scriptsize{(0.803)}} & \mc{1}{c}{\scriptsize{(0.829)}} & \mc{1}{c}{\scriptsize{(0.829)}} \\  
-   
 \bottomrule
-    \end{tabular}
+    \end{tabular} 
