--- a/Appendices/MoreOutcomes.tex
+++ b/Appendices/MoreOutcomes.tex
@@ -8,10 +8,7 @@
 
 \noindent To illustrate the difference between the outcomes in this appendix and the outcomes in Section~\ref{section:c-functions}, consider two outcomes related to employment. In Section~\ref{section:c-functions}, we include employment at age 30. In this appendix, we include both employment at age 30 and job satisfaction at age 30. Job satisfaction is a subjective variable, and it is not as clear what the effect of treatment on outcome is.\\
 
-\noindent Table~\ref{table:abccare_rslt_pooled_counts_all} presents the results for the pooled sample, and Table~\ref{table:abccare_rslt_male_counts_all} and \ref{table:abccare_rslt_female_counts_all} present the results for males and females.
-The statistics presented in the first row of these tables count the number of socially positive treatment effects as a percentage of all treatment effects. The statistics are bolded if they are significantly different from 50\% at the 10\% level. The statistics in the second row count the	number of socially positive treatment effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic is bolded if it is significantly different than 10\% at the 10\% level. It is still the case both that (i) we find a majority of positive treatment effects; and (ii) more than 10\% of these positive treatment effects are significant at the 10\%. It is true that the results weaken if compared to those we consider in Section~\ref{section:c-functions}, but this is expected given how we construct the lists of outcomes.
-
- Appendix~\ref{appendix:morebycat} present the results by categories. The tables that mention \textbf{10\% significance} in their labels present statistics that count the number of socially positive treatment effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic is bolded if it is significantly different than 10\% at the 10\% level. The tables that do not mention \textbf{10\% significance} in their labels present statistics that count the number of socially positive treatment effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly different than 50\% at the 10\% level.
+\noindent Table~\ref{table:abccare_rslt_pooled_counts_all} presents the results for the pooled sample, and Table~\ref{table:abccare_rslt_male_counts_all} and \ref{table:abccare_rslt_female_counts_all} present the results for males and females. It is still the case both that (i) we find a majority of positive treatment effects; and (ii) more than 10\% of these positive treatment effects are significant at the 10\%. It is true that the results weaken if compared to those we consider in Section~\ref{section:c-functions}, but this is expected given how we construct the lists of outcomes. Appendix~\ref{appendix:morebycat} present the results by categories.
 
 
 	\begin{table}[H]
